sinalcabo/force-app/main/default/objects/SC_G1_Criterio__mdt/SC_G1_Criterio__mdt.object-meta.xml
<CustomObject>
    <description>Critérios de qualificação G1 configuráveis por admin</description>
    <label>SC G1 Critério</label>
    <pluralLabel>SC G1 Critérios</pluralLabel>
</CustomObject>