sinalcabo/force-app/main/default/objects/SC_G1_Criterio__mdt/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <label>Campo na Opportunity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>