sinalcabo/force-app/main/default/objects/SC_G1_Criterio__mdt/fields/Bg_Color__c.field-meta.xml
<CustomField>
    <fullName>Bg_Color__c</fullName>
    <label>Cor de Fundo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>