sinalcabo/force-app/main/default/objects/SC_G1_Criterio__mdt/fields/Border_Color__c.field-meta.xml
<CustomField>
    <fullName>Border_Color__c</fullName>
    <label>Cor da Borda</label>
    <length>20</length>
    <type>Text</type>
</CustomField>