sinalcabo/force-app/main/default/objects/SC_G1_Criterio__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mercado</fullName>
            </value>
            <value>
                <fullName>Relacionamento</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Técnico &amp; Competitivo</fullName>
            </value>
            <value>
                <fullName>Estratégico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>