sinalcabo/force-app/main/default/objects/SC_G1_Criterio__mdt/fields/Header_Color__c.field-meta.xml
<CustomField>
    <fullName>Header_Color__c</fullName>
    <label>Cor do Header</label>
    <length>20</length>
    <type>Text</type>
</CustomField>