sinalcabo/force-app/main/default/objects/SC_G1_Criterio__mdt/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <label>Ícone SLDS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>