sinalcabo/force-app/main/default/objects/SC_G1_Criterio__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Ordem</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>