sinalcabo/force-app/main/default/objects/SC_G1_Criterio__mdt/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Peso (decimal)</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>